--- a/src/views/task1.html
+++ b/src/views/task1.html
@@ -1,12 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
-    <title>Task 1</title>
+    <title>ВингТчун</title>
 </head>
 <body>
-    <h1 class="test">asdasdasdasd</h1>
-    <p>Task 1 HTML goes here</p>
+    <header>
+        <div class="content-wrapper">
+
+            <section class="site-logo">
+                <img class="photo1" src="https://images-platform.99static.com/8N2Ota7hz3a0VBFIxo3uSfrz7pw=/500x500/top/smart/99designs-contests-attachments/27/27800/attachment_27800775" alt="WingTchun">
+            </section>
+            <section class="site-nav">
+                <div class="row social-links">
+                    <a class="link" href="#">
+                        <img class="photo2 social-icon" src="https://www.freelance.bg/images/skills/facebook.png" alt="facebook">
+                    </a>
+                    <a class="link" href="#">
+                        <img class=" social-icon" src="https://www.freeiconspng.com/uploads/cricle-twitter-emblem-png-clipart-8.png" alt="twitter">
+                    </a>
+                    <a class="link" href="#">
+                        <img src="https://1000logos.net/wp-content/uploads/2018/01/pinterest-logo.png" class="social-icon" alt="">
+                    </a>
+                    <a class="link" href="#">
+                        <img src="" class="social-icon" alt="">
+                    </a>
+                </div>
+                <div class="nav-links">
+                    <nav>
+                        <a href="http://wingtsun-bg.com/">
+                            ВингТчун
+                        </a>
+                        <a href="http://wingtsun-bg.com/%D0%B2%D0%B8%D0%BD%D0%B3-%D1%87%D1%83%D0%BD-%D1%81%D0%B0%D0%BC%D0%BE%D0%BE%D1%82%D0%B1%D1%80%D0%B0%D0%BD%D0%B0/">
+                            Самоотбрана
+                        </a>
+                        <a href="http://wingtsun-bg.com/category/%D0%B1%D0%BB%D0%BE%D0%B3/">
+                            Блог
+                        </a>
+                        <a href="http://wingtsun-bg.com/%D0%BD%D0%BE%D0%B2%D0%B8%D0%BD%D0%B8/">
+                            Новини
+                        </a>
+                    </nav>
+                </div>
+            </section>
+        </div>
+    </header>
+
+    <main class="content-wrapper">
+        <section class="banner">
+            <img src="https://dummyimage.com/1200x400/c2061c/141414&text=baner" alt="" class="hero">
+        </section>
+
+        <section class="news-wrapper">
+            <article class="first">
+                <h3> Zaglavie</h3>
+                <p><b>Lorem</b> ipsum dolor sit amet, consectetur adipiscing elit. Sed vulputate eget massa sit amet suscipit.
+                   Nam eu tincidunt turpis. Suspendisse libero odio, porttitor ac nunc et, pharetra rutrum ipsum. In non
+                   leo metus. Vestibulum ut venenatis ipsum. Duis lacinia suscipit sodales. Aliquam a nisi pulvinar,
+                   convallis tellus nec, hendrerit <a href="#"> libero. . </a></p>
+
+            </article>
+            <article class="second">
+                <h3> Zaglavie </h3>
+                <p><b>Lorem</b> ipsum dolor sit amet, consectetur adipiscing elit. Sed vulputate eget massa sit amet
+                    suscipit.Nam eu tincidunt turpis. Suspendisse libero odio, porttitor ac nunc et, pharetra rutrum ipsum. In
+                    no leo metus. Vestibulum ut venenatis ipsum. Duis lacinia suscipit sodales. Aliquam a nisi pulvinar,
+                    convallis tellus nec, hendrerit <a href="#"> libero. . </a></p>
+
+            </article>
+            <article class="third">
+                <h3> Zaglavie </h3>
+                <p><b>Lorem</b> ipsum dolor sit amet, consectetur adipiscing elit. Sed vulputate eget massa sit amet
+                    suscipit. Nam eu tincidunt turpis. Suspendisse libero odio, porttitor ac nunc et, pharetra rutrum ipsum. In
+                    non leo metus. Vestibulum ut venenatis ipsum. Duis lacinia suscipit sodales. Aliquam a nisi pulvinar,
+                    convallis tellus nec, hendrerit <a href="#"> libero. . </a></p>
+
+
+            </article>
+        </section>
+    </main>
+
 
 </body>
 </html>
