--- a/src/styles/views/home.scss
+++ b/src/styles/views/home.scss
@@ -3,6 +3,15 @@
     h2 {
         text-align: center;
     }
+    
+    .row {
+        display: block;
+        position: relative;
+        width: 100%;
+
+        clear: both;
+        overflow: hidden;
+    }
 
     .col-md-6 {
         width: 49%;
@@ -20,6 +29,10 @@
         p {
             margin: 8px 0;
             padding: 0 5% 0 0;
+        }
+
+        .view-page {
+            margin-top: 20px;
         }
     }
 }
