--- a/src/views/task1.html
+++ b/src/views/task1.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>ВингТчун</title>
 </head>
-<body>
+<body class="gradient">
     <header>
         <div class="content-wrapper">
 
@@ -21,10 +21,11 @@
                         <img class=" social-icon" src="https://www.freeiconspng.com/uploads/cricle-twitter-emblem-png-clipart-8.png" alt="twitter">
                     </a>
                     <a class="link" href="#">
-                        <img src="https://1000logos.net/wp-content/uploads/2018/01/pinterest-logo.png" class="social-icon" alt="">
+                        <!--<img src="https://1000logos.net/wp-content/uploads/2018/01/pinterest-logo.png" class="social-icon" alt="pinterest">-->
+                        <img src="http://www.iconarchive.com/download/i80477/uiconstock/socialmedia/Pinterest.ico" class="social-icon" alt="pinterest">
                     </a>
                     <a class="link" href="#">
-                        <img src="" class="social-icon" alt="">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Instagram_logo_2016.svg/1024px-Instagram_logo_2016.svg.png" class="social-icon" alt="instagram">
                     </a>
                 </div>
                 <div class="nav-links">
@@ -47,12 +48,12 @@
         </div>
     </header>
 
-    <main class="content-wrapper">
+    <main class="content-wrapper" >
         <section class="banner">
             <img src="https://dummyimage.com/1200x400/c2061c/141414&text=baner" alt="" class="hero">
         </section>
 
-        <section class="news-wrapper">
+        <section class="news-wrapper" >
             <article class="first">
                 <h3> Zaglavie</h3>
                 <p><b>Lorem</b> ipsum dolor sit amet, consectetur adipiscing elit. Sed vulputate eget massa sit amet suscipit.
@@ -78,8 +79,16 @@
 
 
             </article>
-        </section>
+        </section
     </main>
+
+    <footer  class="footer" >
+
+            <h4 class> За контакти: тел. <a href="#">0888423572 </a> </h4>
+
+
+    </footer>
+
 
 
 </body>
