Fixed Task2. Added Task 10 requirements + Siema Slider dependency in package.json

--- a/src/views/task1.html
+++ b/src/views/task1.html
@@ -50,8 +50,10 @@
 
     <main class="content-wrapper" >
         <section class="banner">
+            <!-- Add more images here -->
             <img src="https://dummyimage.com/1200x400/c2061c/141414&text=baner" alt="" class="hero">
         </section>
+        <!--    Add Previous / Next buttons here    -->
 
         <section class="news-wrapper" >
             <article class="first">
@@ -88,8 +90,6 @@
 
 
     </footer>
-
-
 
 </body>
 </html>
