--- a/src/views/task9.html
+++ b/src/views/task9.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Task 9</title>
-</head>
+<html>
 <body>
-    <main class="container">
-        <input type="text" placeholder="Enter number of rows for pascal Triangle" style="width:80%" id="numRows" value="3">
-        <input type="submit" value="Generate" name="Generate">
 
-        <section id="pascal-triangle">
-            <!-- Generated Triangle goes here -->
-        </section>
-    </main>
+<input type="search" id="myInput">
+<input type="submit" value="Generate" onclick="myFunction()">
+<div id="myDIV">
+    <span id="mySpan"></span>
+</div>
+
+
 </body>
 </html>
