--- a/src/views/task1.html
+++ b/src/views/task1.html
@@ -10,21 +10,21 @@
         <div class="content-wrapper">
 
             <section class="site-logo">
-                <img class="photo1" src="https://images-platform.99static.com/8N2Ota7hz3a0VBFIxo3uSfrz7pw=/500x500/top/smart/99designs-contests-attachments/27/27800/attachment_27800775" alt="WingTchun">
+              <img class="photo1" src="https://images-platform.99static.com/8N2Ota7hz3a0VBFIxo3uSfrz7pw=/500x500/top/smart/99designs-contests-attachments/27/27800/attachment_27800775" alt="WingTchun">
             </section>
             <section class="site-nav">
                 <div class="row social-links">
-                    <a class="link" href="#">
+                    <a class="link" href="https://www.facebook.com/">
                         <img class="photo2 social-icon" src="https://www.freelance.bg/images/skills/facebook.png" alt="facebook">
                     </a>
-                    <a class="link" href="#">
+                    <a class="link" href="https://twitter.com/login?lang=bg">
                         <img class=" social-icon" src="https://www.freeiconspng.com/uploads/cricle-twitter-emblem-png-clipart-8.png" alt="twitter">
                     </a>
-                    <a class="link" href="#">
+                    <a class="link" href="https://www.pinterest.com/">
                         <!--<img src="https://1000logos.net/wp-content/uploads/2018/01/pinterest-logo.png" class="social-icon" alt="pinterest">-->
                         <img src="http://www.iconarchive.com/download/i80477/uiconstock/socialmedia/Pinterest.ico" class="social-icon" alt="pinterest">
                     </a>
-                    <a class="link" href="#">
+                    <a class="link" href="https://www.instagram.com/?hl=bg">
                         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Instagram_logo_2016.svg/1024px-Instagram_logo_2016.svg.png" class="social-icon" alt="instagram">
                     </a>
                 </div>
@@ -49,15 +49,18 @@
     </header>
 
     <main class="content-wrapper" >
-        <section class="banner">
-            <!-- Add more images here -->
-            <img src="https://dummyimage.com/1200x400/c2061c/141414&text=baner" alt="" class="hero">
+        <section class="siema">
+            <img src="https://dummyimage.com/1000x200/000/fff&text=train" alt="sliderpic">
+            <img src="https://dummyimage.com/1000x200/000/fff&text=hard" alt="sliderpic">
+            <img src="https://dummyimage.com/1000x200/000/fff&text=fight" alt="sliderpic">
+            <img src="https://dummyimage.com/1000x200/000/fff&text=easy" alt="sliderpic">
         </section>
-        <!--    Add Previous / Next buttons here    -->
+        <button class="prev">Prev</button>
+        <button class="next">Next</button>
 
         <section class="news-wrapper" >
             <article class="first">
-                <h3> Zaglavie</h3>
+                <h3>  Статия 1</h3>
                 <p><b>Lorem</b> ipsum dolor sit amet, consectetur adipiscing elit. Sed vulputate eget massa sit amet suscipit.
                    Nam eu tincidunt turpis. Suspendisse libero odio, porttitor ac nunc et, pharetra rutrum ipsum. In non
                    leo metus. Vestibulum ut venenatis ipsum. Duis lacinia suscipit sodales. Aliquam a nisi pulvinar,
@@ -65,7 +68,7 @@
 
             </article>
             <article class="second">
-                <h3> Zaglavie </h3>
+                <h3> Статия 2</h3>
                 <p><b>Lorem</b> ipsum dolor sit amet, consectetur adipiscing elit. Sed vulputate eget massa sit amet
                     suscipit.Nam eu tincidunt turpis. Suspendisse libero odio, porttitor ac nunc et, pharetra rutrum ipsum. In
                     no leo metus. Vestibulum ut venenatis ipsum. Duis lacinia suscipit sodales. Aliquam a nisi pulvinar,
@@ -73,7 +76,7 @@
 
             </article>
             <article class="third">
-                <h3> Zaglavie </h3>
+                <h3> Статия 3</h3>
                 <p><b>Lorem</b> ipsum dolor sit amet, consectetur adipiscing elit. Sed vulputate eget massa sit amet
                     suscipit. Nam eu tincidunt turpis. Suspendisse libero odio, porttitor ac nunc et, pharetra rutrum ipsum. In
                     non leo metus. Vestibulum ut venenatis ipsum. Duis lacinia suscipit sodales. Aliquam a nisi pulvinar,
