--- a/src/views/task9.html
+++ b/src/views/task9.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Task 9</title>
+    <link rel="icon" href="public/img/uniqa_favicon.ico" type="image/x-icon"/>
+</head>
 <body>
-
-<input type="search" id="myInput">
-<input type="submit" value="Generate" onclick="myFunction()">
-<div id="myDIV">
-    <span id="mySpan"></span>
-</div>
-
+<main class="task9">
+    <h4>Pascal Triangle Number of Rows to Generate</h4>
+    <input type="search" id="myInput">
+    <input type="submit" value="Generate" onclick="generatePascalTriangle()">
+    <div id="myDIV">
+        <span id="mySpan"></span>
+    </div>
+</main>
 
 </body>
 </html>
