--- a/src/styles/views/home.scss
+++ b/src/styles/views/home.scss
@@ -12,8 +12,15 @@
     }
 }
 .homepage {
+    font-family: "Trebuchet MS";
+
     h2 {
         text-align: center;
+        color: #0b6eb2;
+        margin: 40px 0;
+        font-size: 46px;
+
+        font-family: "Bookman Old Style";
     }
     
     .row {
@@ -26,15 +33,27 @@
     }
 
     .col-md-6 {
-        width: 49%;
+        width: 47%;
         display: inline-block;
         vertical-align: top;
+
+        &:nth-child(even) {
+            margin-left: 1%;
+        }
+
+        &:nth-child(odd) {
+            margin-right: 1%;
+        }
     }
 
     .task-wrapper {
         margin-bottom: 30px;
+        padding: 20px;
+        background-color: cornsilk;
+        border-radius: 20px;
 
         h4 {
+            margin-top: 10px;
             font-size: 18px;
         }
 
@@ -46,5 +65,27 @@
         .view-page {
             margin-top: 20px;
         }
+    }
+}
+
+.body-home footer {
+    width: 100%;
+    height: 80px;
+    margin-top: 45px;
+    padding-top: 27px;
+    background-color: #0b6eb2;
+    position: relative;
+    text-align: right;
+
+    a {
+        display: block;
+
+        margin: 0 20px 15px 0;
+
+        color: #FFFFFF;
+        font-size: 18px;
+        font-family: "Courier New";
+        text-decoration: none;
+        text-shadow: -1px -1px 0px rgba(0, 0, 0, 0.6), 2px 2px 25px rgba(0, 0, 0, 0.5);
     }
 }
