Alighnment fix on homepage

--- a/src/styles/views/home.scss
+++ b/src/styles/views/home.scss
@@ -17,7 +17,7 @@
     h2 {
         text-align: center;
         color: #0b6eb2;
-        margin: 40px 0;
+        margin: 40px 0 60px 0;
         font-size: 46px;
 
         font-family: "Bookman Old Style";
